--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,11 +24,28 @@ serde_json = "1"
 log = "0.4.19"
 dotenvy = "0.15.7"
 tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
-async-openai = "0.19.1"
+qwen3-inference = { path = "../qwen3-rs/qwen3-inference" }
+anyhow = "1.0"
+once_cell = "1"
+byteorder = "1.5"
 rusqlite = { version = "0.31.0", features = ["bundled"] }
 chrono = { version = "0.4", features = ["serde"] }
 
 tauri-plugin-shell = "2.0.0-beta.3"
 tauri-plugin-sql = { version = "2.0.0-beta.8", features = ["sqlite"] }
 tauri-plugin-log = { version = "2.0.0-beta.4", features = ["colored", "tracing"] }
+
+# Compile the heavy-weight inference crate with full optimisation even during dev builds
+[profile.dev.package."qwen3-inference"]
+opt-level = 3
+debug-assertions = false
+overflow-checks = false
+codegen-units = 1
+
+# Also optimise rayon (parallel loops) which is compute-heavy inside matmul
+[profile.dev.package."rayon"]
+opt-level = 3
+debug-assertions = false
+overflow-checks = false
+codegen-units = 1
 
