--- a/packages/inference-server-macos/pyproject.toml
+++ b/packages/inference-server-macos/pyproject.toml
@@ -45,6 +45,7 @@ dev = [
     "isort>=5.12.0",
     "mypy>=1.4.0",
     "pre-commit>=3.3.0",
+    "openai>=1.0.0",
 ]
 build = [
     "pyinstaller>=6.0.0",
