--- a/packages/inference-server-macos/pyproject.toml
+++ b/packages/inference-server-macos/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "mlx-engine-server"
+name = "openchat-mlx-server"
 version = "0.1.0"
 description = "Production-ready MLX server with OpenAI-compatible APIs for local LLM inference"
 requires-python = ">=3.9"
@@ -23,16 +23,16 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
 dependencies = [
-    "mlx>=0.26.3",
-    "mlx-lm>=0.26.0",
-    "transformers>=4.53.0",
-    "fastapi>=0.115.0",
+    "mlx>=0.27.1",
+    "mlx-lm>=0.26.2",
+    "transformers>=4.55.0",
+    "fastapi>=0.116.1",
     "uvicorn[standard]>=0.35.0",
-    "pydantic>=2.11.0",
-    "requests>=2.32.0",
-    "psutil>=5.9.0",
+    "pydantic>=2.11.7",
+    "requests>=2.32.4",
+    "psutil>=7.0.0",
     "python-multipart>=0.0.20",
-    "httpx>=0.27.0",
+    "httpx>=0.28.1",
     "aiofiles>=24.1.0",
 ]
 
@@ -52,7 +52,7 @@ build = [
 ]
 
 [project.scripts]
-mlx-server = "mlx_engine_server.main:main"
+openchat-mlx-server = "openchat_mlx_server.main:main"
 
 [tool.setuptools.packages.find]
 where = ["src"]
