--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "hast-util-to-jsx-runtime": "^2.3.6",
+    "lodash-es": "^4.17.21",
     "lucide-react": "^0.536.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -54,6 +55,7 @@
     "@ocavue/tsconfig": "^0.3.7",
     "@tailwindcss/typography": "^0.5.16",
     "@tauri-apps/cli": "^2",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^24.2.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
