--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,12 +23,13 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 log = "0.4.19"
 dotenvy = "0.15.7"
-tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "process"] }
 anyhow = "1.0"
 once_cell = "1"
 byteorder = "1.5"
 chrono = { version = "0.4", features = ["serde"] }
 sqlx = { version = "0.7", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
+reqwest = { version = "0.11", features = ["json"] }
 
 tauri-plugin-shell = "2.0.0-beta.3"
 tauri-plugin-sql = { version = "2.0.0-beta.8", features = ["sqlite"] }
