--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,6 +30,8 @@ byteorder = "1.5"
 chrono = { version = "0.4", features = ["serde"] }
 sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
 reqwest = { version = "0.12", features = ["json"] }
+libc = "0.2"
+windows-sys = { version = "0.52", features = ["Win32_System_Threading"] }
 
 tauri-plugin-shell = "2.3.0"
 tauri-plugin-sql = { version = "2.3.0", features = ["sqlite"] }
