--- a/package.json
+++ b/package.json
@@ -20,22 +20,24 @@
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.84.1",
-    "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/api": "^2.7.0",
+    "@tauri-apps/plugin-opener": "^2.4.0",
     "@tauri-apps/plugin-shell": "^2.3.0",
     "@tauri-apps/plugin-sql": "^2.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "hast-util-to-jsx-runtime": "^2.3.6",
-    "lucide-react": "^0.536.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "lodash-es": "^4.17.21",
+    "lucide-react": "^0.537.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
     "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
@@ -51,16 +53,18 @@
   "devDependencies": {
     "@ocavue/eslint-config": "^3.3.0",
     "@ocavue/tsconfig": "^0.3.7",
-    "@tauri-apps/cli": "^2",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tauri-apps/cli": "^2.7.1",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^24.2.0",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.32.0",
     "prettier": "^3.6.2",
     "tw-animate-css": "^1.3.6",
-    "typescript": "~5.6.2",
-    "vite": "^6.0.3",
+    "typescript": "~5.9.2",
+    "vite": "^7.1.0",
     "vitest": "^3.2.4"
   }
 }
