--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,22 +15,25 @@ name = "openchat_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2", features = [] }
+tauri-build = { version = "2.3.1", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = ["unstable"] }
+tauri = { version = "2.7.0", features = ["unstable"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-log = "0.4.19"
+log = "0.4.27"
 dotenvy = "0.15.7"
-tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "process"] }
 anyhow = "1.0"
 once_cell = "1"
 byteorder = "1.5"
 chrono = { version = "0.4", features = ["serde"] }
-sqlx = { version = "0.7", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
+sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
+reqwest = { version = "0.12", features = ["json"] }
+libc = "0.2"
+windows-sys = { version = "0.52", features = ["Win32_System_Threading"] }
 
-tauri-plugin-shell = "2.0.0-beta.3"
-tauri-plugin-sql = { version = "2.0.0-beta.8", features = ["sqlite"] }
-tauri-plugin-log = { version = "2.0.0-beta.4", features = ["colored", "tracing"] }
+tauri-plugin-shell = "2.3.0"
+tauri-plugin-sql = { version = "2.3.0", features = ["sqlite"] }
+tauri-plugin-log = { version = "2.6.0", features = ["colored", "tracing"] }
 
