--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,7 +18,7 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2.3.1", features = [] }
 
 [dependencies]
-tauri = { version = "2.7.0", features = ["unstable"] }
+tauri = { version = "2.7.0", features = [ "macos-private-api", "unstable"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 log = "0.4.27"
