--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "openchat"
+name = "OpenChat"
 version = "0.1.0"
-description = "A Tauri App"
+description = "Private AI"
 authors = ["you"]
 edition = "2021"
 
