--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -41,6 +42,7 @@
     "lucide-react": "^0.537.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
     "react-markdown": "^10.1.0",
     "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
@@ -51,7 +53,7 @@
     "tailwindcss": "^4.1.11",
     "unist": "^0.0.1",
     "unist-util-visit": "^5.0.0",
-    "zod": "^4.0.15"
+    "zod": "^3.25"
   },
   "devDependencies": {
     "@ocavue/eslint-config": "^3.3.0",
