--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -37,3 +37,8 @@ tauri-plugin-shell = "2.3.0"
 tauri-plugin-sql = { version = "2.3.0", features = ["sqlite"] }
 tauri-plugin-log = { version = "2.6.0", features = ["colored", "tracing"] }
 
+# Download Hugging Face repositories (models) before starting mlc_llm
+hf_download = { git = "https://github.com/maccman/hf-download.git" }
+# Cross-platform home directory discovery
+home = "0.5"
+
