Update .gitignore to include new Python binary, enhance TODO.md with debugging tasks, modify tauri.conf.json to reference additional binaries, and refactor MLCServerManager for improved process handling and logging.

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ openchat-mlx-server-dist/
 openchat-mlx-server-macos-arm64.tar.gz
 
 src-tauri/binaries/openchat-mlx-server-aarch64-apple-darwin
+src-tauri/binaries/python3-aarch64-apple-darwin
 
 # Runtime files
 *.pid
