Update package.json to remove hast-util-to-jsx-runtime dependency and add react-shiki for improved code highlighting. Refactor code-block component to lazy load Shiki for better performance and enhance chat-message component styling.

--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "ai": "^5.0.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "hast-util-to-jsx-runtime": "^2.3.6",
     "kysely": "^0.28.4",
     "kysely-dialect-tauri": "^1.2.1",
     "lodash-es": "^4.17.21",
@@ -48,6 +47,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-markdown": "^10.1.0",
+    "react-shiki": "^0.7.3",
     "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
