--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,7 @@ serde_json = "1"
 log = "0.4.27"
 dotenvy = "0.15.7"
 tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "process"] }
+async-trait = "0.1"
 anyhow = "1.0"
 once_cell = "1"
 byteorder = "1.5"
