--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.9",
     "@ai-sdk/openai-compatible": "^1.0.7",
+    "@ai-sdk/provider-utils": "^3.0.7",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-collapsible": "^1.1.11",
@@ -32,6 +33,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/react-visually-hidden": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.84.1",
     "@tauri-apps/api": "^2.7.0",
@@ -39,9 +41,11 @@
     "@tauri-apps/plugin-opener": "^2.4.0",
     "@tauri-apps/plugin-shell": "^2.3.0",
     "@tauri-apps/plugin-sql": "^2.3.0",
+    "@types/unist": "^3.0.3",
     "ai": "^5.0.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "katex": "^0.16.22",
     "kysely": "^0.28.4",
     "kysely-dialect-tauri": "^1.2.1",
     "lodash-es": "^4.17.21",
